<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:layout_marginTop="10dp"
    android:background="@color/item_background"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:id="@+id/btnPostItem">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:text="@string/comments"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_post_heading"
                android:background="@null"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/votes"
                android:text="@string/votes"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_post_heading"
                android:background="@null"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/posted_on"
                android:id="@+id/posted_on"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_post_details_text"
                android:layout_marginTop="5dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/posted_by"
                android:id="@+id/posted_by"
                android:layout_gravity="center_vertical"
                android:textColor="@color/main_post_details_text"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </RelativeLayout>

    </LinearLayout>
    <View android:layout_width="fill_parent"
        android:layout_height="5sp"
        android:background="@color/winBackground"/>
</LinearLayout>
